// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Base Input renders with value without crashing 1`] = `
<Base$1
  onChange={[Function]}
  value="test"
>
  <FloatingLabelWrapper
    data-qa="base-input"
    data-qa-label="base-input-label"
    onChange={[Function]}
    value="test"
  >
    <div
      className="FloatingLabelWrapper GenericInput "
      style={
        Object {
          "cursor": "text",
          "position": "relative",
        }
      }
    >
      <div
        className="inputWrapper   bd-radius"
      >
        <input
          autoComplete="off"
          autoFocus={true}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          style={
            Object {
              "color": "hsl(0, 2%, 12%)",
              "cursor": "text",
              "textAlign": undefined,
            }
          }
          type="text"
          value="test"
        />
        <span
          className="bar "
        />
      </div>
    </div>
  </FloatingLabelWrapper>
</Base$1>
`;

exports[`Base Input renders without crashing 1`] = `
<Base$1>
  <FloatingLabelWrapper
    data-qa="base-input"
    data-qa-label="base-input-label"
    onChange={[Function]}
  >
    <div
      className="FloatingLabelWrapper GenericInput "
      style={
        Object {
          "cursor": "text",
          "position": "relative",
        }
      }
    >
      <div
        className="inputWrapper   bd-radius"
      >
        <input
          autoComplete="off"
          autoFocus={true}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          style={
            Object {
              "color": "hsl(0, 2%, 12%)",
              "cursor": "text",
              "textAlign": undefined,
            }
          }
          type="text"
        />
        <span
          className="bar "
        />
      </div>
    </div>
  </FloatingLabelWrapper>
</Base$1>
`;
